chore: update pass